codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Ran 4 commands · ctrl + t to view transcript
