codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__failed_image_generation_call_history_snapshot.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: "lines_to_single_string(&cells[0])"
---
✗ Image generation failed
  └ A tiny blue square
